maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:44: error: not found: value ind
    ind=getIndication(x,y)
    ^ShortestPathMaze:46: error: not found: value ind
      if(getIndication(x,y-1)==ind-1){
                               ^ShortestPathMaze:51: error: not found: value ind
      if(getIndication(x-1,y)==ind-1){
                               ^ShortestPathMaze:57: error: not found: value ind
        if(getIndication(x,y+1)==ind-1){
                                 ^ShortestPathMaze:64: error: not found: value ind
        if(getIndication(x+1,y)==ind-1){
                                 ^